[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/HanamaruSprite.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/light_radius.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 180, 2, 31, 36 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 211, 2, 31, 36 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 244, 2, 37, 36 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 60, 2, 30, 36 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 90, 2, 30, 36 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 120, 2, 30, 36 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 150, 2, 30, 36 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 2, 30, 36 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 30, 2, 30, 36 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 13.5 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )
animation = "stand"
frame = 1
playing = true

[node name="LanternLight" type="Light2D" parent="AnimatedSprite"]
texture = ExtResource( 3 )
texture_scale = 20.0
shadow_enabled = true

[node name="LanternLight2" type="Light2D" parent="AnimatedSprite"]
visible = false
texture = ExtResource( 3 )
texture_scale = 50.0
shadow_gradient_length = 5.4

[node name="Camera2D" type="Camera2D" parent="AnimatedSprite"]
current = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.5 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="TimeLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -12.0
margin_top = -41.0
margin_right = 12.0
margin_bottom = -26.0
text = "100"
align = 1

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = 30.0
margin_right = 20.0
margin_bottom = 44.0
text = "0"
align = 1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
